@@ -340,6 +340,8 @@ before executing the external notification program. The variables are:
 
   \fB_TS\fR             Unix timestamp of the event.
   \fB_IDENT\fR          tsdecrypt ident parameter with "/" replaced by "\-".
+  \fB_INPUT_ADDR\fR     Input address and port (for example 239.1.2.3:5000)
+  \fB_OUTPUT_ADDR\fR    Output address and port (for example 239.9.8.7:5000)
   \fB_MESSAGE_ID\fR     Event message id (for example START, STOP, etc...).
   \fB_MESSAGE_MSG\fR    Event message id with "_" replaced by " ".
   \fB_MESSAGE_TEXT\fR   Event message text. Human readable event message.
